# Magicblock-ER

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  WalletProvider.tsx  index.css  main.tsx
src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
tests/web3js/: schema.ts  tap-chain.test.ts
