[package]
name = "tap-chain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.2.1"
ephemeral-rollups-sdk = "0.6.5"

# Pin blake3 to avoid edition2024 requirement in 1.8.3+
# (Solana BPF toolchain uses Cargo 1.84 which doesn't support edition2024)
blake3 = "=1.8.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[workspace]
